se agrega la funcion de reservacion

--- a/index.html
+++ b/index.html
@@ -101,33 +101,44 @@
                     <img src="https://t4.ftcdn.net/jpg/01/88/09/67/360_F_188096730_3hHZnyYI7zH7ATN4QJdNoZgMJDRAdbGW.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h4 class="card-title">Casa</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-success">Go somewhere</a>
+                        <p class="card-text">Contamos con una amplia gama de propiedades, desde acogedoras casas rurales hasta lujosas villas en la playa, disponibles para vos.</p>
+                        <a href="#" class="btn btn-success">Ver más</a>
                     </div>
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="https://static.vecteezy.com/system/resources/previews/047/444/088/non_2x/3d-model-of-high-rise-apartment-building-on-transparent-background-ai-generative-free-png.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h4 class="card-title">Departamento</h4>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-success">Go somewhere</a>
+                    <p class="card-text">Modernos apartamentos en el corazón de la ciudad o un lugar tranquilo, contamos con una variedad de opciones que se adaptan a tus preferencias.</p>
+                    <a href="#" class="btn btn-success">Ver más</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="https://img2.cgtrader.com/items/1842729/45cf38aa18/large/modern-duplex-house-model-contemporary-3d-model-max-obj-mtl-fbx.jpg" class="card-img-top" alt="...">
+                <img src="./assets/duplex.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h4 class="card-title">Duplex</h4>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Nuestros dúplex están ubicados en zonas privilegiadas y diseñados para brindarte una experiencia de lujo y confort.</p>
                     <a href="#" class="btn btn-success">Ver más</a>
                 </div>
             </div>
             </article>
         </section>
-        <footer>
+        <footer class="fondoFooter">
             <div>
-                <img src="https://www.clker.com/cliparts/U/6/e/C/Z/l/green-house-icon-hi.png" alt="Logo" width="22" height="22" >
-                <a href="https://wa.me/123456789" target="_blank">
-                    <i class="fab fa-whatsapp"></i>
+                <ul class="nav justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Subir al Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Instagram</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">WhatsApp</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Facebook</a> 
+                    </li>
+                </ul>
             </div>
         </footer>
     </main>
